crates/bitnet-inference/tests/snapshots/snapshot_wave27__custom_inference_config.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
{
  "sampling": {
    "temperature": 0.8,
    "top_k": 40,
    "top_p": 0.95,
    "repetition_penalty": 1.1,
    "seed": 12345
  },
  "generation": {
    "max_tokens": 256,
    "stop_sequences": [
      "</s>"
    ],
    "stop_token_ids": [
      128009
    ],
    "stream": true
  },
  "hardware": {
    "num_threads": 4,
    "memory_limit_mb": 4096
  }
}
