crates/bitnet-inference/tests/snapshots/snapshot_wave27__generation_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
{
  "max_tokens": 128,
  "stop_sequences": [],
  "stop_token_ids": [],
  "stream": false
}
