crates/bitnet-inference/tests/snapshots/snapshot_wave27__generation_config_with_stops.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
{
  "max_tokens": 64,
  "stop_sequences": [
    "</s>",
    "\n\nQ:"
  ],
  "stop_token_ids": [
    128009,
    128001
  ],
  "stream": true
}
