crates/bitnet-inference/tests/snapshots/snapshot_wave27__hardware_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
{
  "num_threads": 0,
  "memory_limit_mb": 0
}
