crates/bitnet-inference/tests/snapshots/snapshot_wave27__preset_deterministic_config.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: cfg
---
{
  "sampling": {
    "temperature": 0.0,
    "top_k": 1,
    "top_p": 1.0,
    "repetition_penalty": 1.0,
    "seed": 42
  },
  "generation": {
    "max_tokens": 128,
    "stop_sequences": [],
    "stop_token_ids": [],
    "stream": false
  },
  "hardware": {
    "num_threads": 1,
    "memory_limit_mb": 0
  }
}
