crates/bitnet-inference/tests/snapshots/snapshot_wave27__preset_enum_all_json.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: presets
---
[
  "Fast",
  "Balanced",
  "Quality",
  "Deterministic",
  "Debug"
]
