crates/bitnet-inference/tests/snapshots/snapshot_wave27__profile_report_chrome_trace.snap
---
source: crates/bitnet-inference/tests/snapshot_wave27.rs
expression: report.export_chrome_trace()
---
[
  {
    "cat": "norm",
    "name": "layer_0.norm",
    "ph": "B",
    "pid": 1,
    "tid": 1,
    "ts": 0.0
  },
  {
    "cat": "norm",
    "name": "layer_0.norm",
    "ph": "E",
    "pid": 1,
    "tid": 1,
    "ts": 500.0
  }
]
